--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,28 @@
 <mat-sidenav-container class="sidenav-container">
     <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isMobile$ | async) ? 'dialog' : 'navigation'"
-        [mode]="(isMobile$ | async) ? 'over' : 'side'" [opened]="(isMobile$ | async) === false">
+        [mode]="(isMobile$ | async) ? 'over' : 'side'" [opened]="(!(isMobile$ | async)) && (isAuthenticated$ | async)"
+        (click)="close()">
 
-        <mat-toolbar>Menu</mat-toolbar>
+        <mat-toolbar>
+            <span *ngIf="(user$ |async) as user">
+                <pre> {{user.settings | json}} </pre>
+            </span>
+        </mat-toolbar>
 
         <app-sidenav-content></app-sidenav-content>
 
     </mat-sidenav>
     <mat-sidenav-content>
 
-        <app-nav-toolbar [drawer]="drawer"></app-nav-toolbar>
-
-        <!-- Add Content Here -->
+        <!-- 
+            <app-nav-toolbar [drawer]="drawer"></app-nav-toolbar>
 
         <section class="content">
             <router-outlet></router-outlet>
-        </section>
+        </section> 
+        -->
 
+        <router-outlet></router-outlet>
 
     </mat-sidenav-content>
 </mat-sidenav-container>
