--- a/src/app/layout/btn-menu/btn-menu.component.html
+++ b/src/app/layout/btn-menu/btn-menu.component.html
@@ -1,3 +1,4 @@
-<button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+<button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" fxHide.gt-sm
+    *ngIf="(isAuthenticated$ | async)">
     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
 </button>
