--- a/src/app/pages/post/post-form/post-form.component.html
+++ b/src/app/pages/post/post-form/post-form.component.html
@@ -1,11 +1,11 @@
 <div fxLayoutAlign="center">
     <mat-card fxLayout="column" fxFlex="100" fxFlex.sm="85" fxFlex.gt-sm="75">
 
-        <form autocomplete="off" novalidate [formGroup]="postForm" (submit)="save()">
+        <form autocomplete="off" novalidate [formGroup]="form" (submit)="save()">
             <mat-form-field>
                 <input #imageURL matInput [placeholder]="'post.input.featured_image' | translate" name="featured_image"
                     formControlName="featured_image">
-                <mat-error *ngIf="postForm.get('featured_image')?.hasError('url')">
+                <mat-error *ngIf="form.get('featured_image')?.hasError('url')">
                     {{ 'validation.url' | translate }}
                 </mat-error>
             </mat-form-field>
@@ -30,25 +30,27 @@
                     <tinymce matInput name="content" [config]="options" formControlName="content"></tinymce>
                 </div>
 
-                <mat-form-field formArrayName="tags">
-                    <mat-chip-list #chipList>
-                        <mat-chip *ngFor="let tag of tags.controls ; let i = index;" [formGroupName]="i"
-                            [selectable]="selectable" [removable]="removable" (removed)="removeTag(i)">
-                            {{tag.value.text}}
+                <!-- MATERIAL CHIPS -->
+                <mat-form-field class="example-chip-list">
+                    <mat-chip-list #chipList formArrayName="names">
+                        <mat-chip *ngFor="let name of names.controls; let i=index;" [selectable]="selectable"
+                            [removable]="removable" (removed)="remove(form, i)">
+                            {{name.value}}
                             <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
                         </mat-chip>
-                        <input [placeholder]="'post.input.tags' | translate" [matChipInputFor]="chipList"
-                            [matChipInputAddOnBlur]="addOnBlur" (matChipInputTokenEnd)="addTag($event)" />
+                        <input placeholder="Names" [matChipInputFor]="chipList" [matChipInputAddOnBlur]="addOnBlur"
+                            (matChipInputTokenEnd)="add($event, form)">
                     </mat-chip-list>
+                    <mat-error>Atleast 1 name need to be added</mat-error>
                 </mat-form-field>
             </mat-card-content>
             <div align="end">
-                <button type="submit" color="primary" mat-raised-button [disabled]="postForm.invalid && postForm.dirty">
+                <button type="submit" color="primary" mat-raised-button [disabled]="form.invalid && form.dirty">
                     {{ 'post.input.save' | translate }}
                 </button>
             </div>
             <div>
-                <pre>{{postForm.value | json}}</pre>
+                <pre>{{form.value | json}}</pre>
             </div>
         </form>
     </mat-card>
