#6 btn menu click event from different toolbars

--- a/src/app/layout/btn-menu/btn-menu.component.html
+++ b/src/app/layout/btn-menu/btn-menu.component.html
@@ -1,4 +1,4 @@
-<button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" fxHide.gt-sm
+<button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="onClick()" fxHide.gt-sm
     *ngIf="(isAuthenticated$ | async)">
     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
 </button>
