--- a/src/app/layout/toolbar/nav-toolbar/nav-toolbar.component.html
+++ b/src/app/layout/toolbar/nav-toolbar/nav-toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="mat-elevation-z8">
 
-    <app-btn-menu [drawer]="drawer"></app-btn-menu>
+    <app-btn-menu></app-btn-menu>
     <span>ANGULAR 13 MATERIAL</span>
 
     <span fxFlex></span>
