#7 virtual scroll and paginator

--- a/src/app/layout/btn-profile/btn-profile.component.html
+++ b/src/app/layout/btn-profile/btn-profile.component.html
@@ -1,1 +1,6 @@
-<p>btn-profile works!</p>
+<a routerLink="/profile" href="#" role="button" tabindex="0" aria-expanded="false">
+    <img class="gb_Aa gbii"
+        src="https://lh3.googleusercontent.com/ogw/ADea4I4Z0_fP8TFSzkWwFpYMN82NM6MpoB1WoGtnebfb=s32-c-mo"
+        srcset="https://lh3.googleusercontent.com/ogw/ADea4I4Z0_fP8TFSzkWwFpYMN82NM6MpoB1WoGtnebfb=s32-c-mo 1x, https://lh3.googleusercontent.com/ogw/ADea4I4Z0_fP8TFSzkWwFpYMN82NM6MpoB1WoGtnebfb=s64-c-mo 2x "
+        alt="" aria-hidden="true" data-noaft="">
+</a>
