--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,1 +1,6 @@
-<p>profile works!</p>
+<app-default-toolbar></app-default-toolbar>
+<div fxLayoutAlign="center">
+    <mat-card fxLayout="column" fxFlex="100" fxFlex.sm="80" fxFlex.gt-sm="55">
+        <p>profile works!</p>
+    </mat-card>
+</div>
