--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,9 +5,32 @@ body {
     height: 100vh;
     width: 100vw;
 }
+
 body {
     margin: 0;
     padding: 0;
     border: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+
+.mat-list-item-content {
+    width: 100% !important;
+}
+
+// span.mat-list-text {
+//     overflow: hidden;
+
+//     p.mat-line {
+//         white-space: nowrap;
+//         overflow: hidden;
+//         text-overflow: ellipsis;
+//         display: block;
+//         box-sizing: border-box;
+//     }
+
+// }
+
+button.mat-list-item {
+    padding: 0 1rem !important;
 }
