--- a/src/app/pages/post/post-list/post-list.component.html
+++ b/src/app/pages/post/post-list/post-list.component.html
@@ -1,35 +1,14 @@
-<!-- <div class="example-viewport">
-    <cdk-virtual-scroll-viewport #viewport fxLayout="row" fxLayout.xs="column" fxFlexFill itemSize="100"
-        (scrolledIndexChange)="nextBatch()">
-        <div *cdkVirtualFor="let post of (data$ | async); let i = index" class="example-item">{{post.title}}</div>
-    </cdk-virtual-scroll-viewport>
-</div> -->
+<div fxFlex="100" fxFlex.sm="85" fxFlex.gt-sm="75">
 
-<!-- <div class="example-viewport">
+    <mat-card *ngFor="let item of items; let i=index">
+        <mat-card-header>
+            <div mat-card-avatar class="header-image"></div>
+            <mat-card-title class="title"> {{item.title}}
+                <div class="flex-child long-and-truncated">
+                    <span>{{item.content}}</span>
+                </div>
+            </mat-card-title>
+        </mat-card-header>
+    </mat-card>
 
-    <cdk-virtual-scroll-viewport #viewport fxLayout="row" fxLayout.xs="column" fxFlexFill itemSize="100">
-        <mat-list>
-
-            <mat-list-item *cdkVirtualFor="let item of items; let i = index" class="example-item">
-                <app-post-element [post]="item"></app-post-element>
-            </mat-list-item>
-        </mat-list>
-    </cdk-virtual-scroll-viewport>
-</div> -->
-
-<div class="virtual-viewport-container">
-
-    <cdk-virtual-scroll-viewport #viewport fxLayout="row" fxLayout.xs="column" fxFlexFill itemSize="75">
-        <mat-list>
-            <mat-list-item *cdkVirtualFor="let item of items; let i = index" class="post-item mat-card">
-
-                <img matListAvatar [src]="item.img" alt="...">
-                <h3 matLine> {{item.title}} </h3>
-                <p matLine>
-                    <span> {{item.content}} </span>
-                    <span> -- {{item.author}} </span>
-                </p>
-            </mat-list-item>
-        </mat-list>
-    </cdk-virtual-scroll-viewport>
 </div>
