--- a/src/app/pages/post/post-virtual-list/post-virtual-element/post-virtual-element.component.scss
+++ b/src/app/pages/post/post-virtual-list/post-virtual-element/post-virtual-element.component.scss
@@ -10,6 +10,8 @@
 mat-card {
     margin: 0.25rem 0.5rem;
     width: auto;
+    display: flex;
+    align-self: center;
 }
 
 .mat-card-header .mat-card-title {
