--- a/src/app/pages/post/post-virtual-list/post-virtual-list.component.html
+++ b/src/app/pages/post/post-virtual-list/post-virtual-list.component.html
@@ -1,3 +1,11 @@
+<!-- <div class="virtual-scroll-container">
+    <cdk-virtual-scroll-viewport #viewport itemSize="75" class="virtual-scroll-viewport"
+        (scrolledIndexChange)="nextBatch()">
+        <app-post-virtual-element *cdkVirtualFor="let post of (data$ | async); let i = index" [item]="post">
+        </app-post-virtual-element>
+    </cdk-virtual-scroll-viewport>
+</div> -->
+
 <div class="virtual-scroll-container">
     <cdk-virtual-scroll-viewport #viewport itemSize="75" class="virtual-scroll-viewport">
         <app-post-virtual-element *cdkVirtualFor="let item of items; let i = index" [item]="item">
