--- a/src/app/pages/post/post-virtual-list/post-virtual-element/post-virtual-element.component.html
+++ b/src/app/pages/post/post-virtual-list/post-virtual-element/post-virtual-element.component.html
@@ -1,10 +1,31 @@
-<mat-card fxFlex="100" fxFlex.sm="85" fxFlex.gt-sm="75">
+<!-- <mat-card fxFlex="100" fxFlex.sm="85" fxFlex.gt-sm="75">
     <mat-card-header>
         <div mat-card-avatar class="header-image"></div>
-        <mat-card-title class="title"> {{item.title}}
+        <mat-card-title> 
+            {{ item.title }}        
             <div class="flex-child long-and-truncated">
-                <span>{{item.content}}</span>
+                <span>{{ item.created_at * 1000 | amDateFormat: "DD-MM-YYYY HH:mm" }}
+            | URSULA SEIJAS</span>
             </div>
         </mat-card-title>
     </mat-card-header>
-</mat-card>
+</mat-card> -->
+<a [routerLink]="['/posts', item.id]" class="post-anchor-element" fxFlex="100" fxFlex.sm="85" fxFlex.gt-sm="75">
+    <mat-card>
+        <mat-card-header>
+            <div mat-card-avatar class="header-image"></div>
+
+            <mat-card-title>
+                <div class="flex-child long-and-truncated">
+                    <span> {{item.title}} </span>
+                </div>
+            </mat-card-title>
+            <mat-card-subtitle>
+                <div class="flex-child long-and-truncated">
+                    <span>{{item.content}}</span>
+                </div>
+            </mat-card-subtitle>
+
+        </mat-card-header>
+    </mat-card>
+</a>
