--- a/src/app/pages/post/post-virtual-list/post-virtual-element/post-virtual-element.component.html
+++ b/src/app/pages/post/post-virtual-list/post-virtual-element/post-virtual-element.component.html
@@ -1,15 +1,3 @@
-<!-- <mat-card fxFlex="100" fxFlex.sm="85" fxFlex.gt-sm="75">
-    <mat-card-header>
-        <div mat-card-avatar class="header-image"></div>
-        <mat-card-title> 
-            {{ item.title }}        
-            <div class="flex-child long-and-truncated">
-                <span>{{ item.created_at * 1000 | amDateFormat: "DD-MM-YYYY HH:mm" }}
-            | URSULA SEIJAS</span>
-            </div>
-        </mat-card-title>
-    </mat-card-header>
-</mat-card> -->
 <a [routerLink]="['/posts', item.id]" class="post-anchor-element" fxFlex="100" fxFlex.sm="85" fxFlex.gt-sm="75">
     <mat-card>
         <mat-card-header>
@@ -22,7 +10,10 @@
             </mat-card-title>
             <mat-card-subtitle>
                 <div class="flex-child long-and-truncated">
-                    <span>{{item.content}}</span>
+                    <span>
+                        {{ item.created_at * 1000 | amDateFormat: "DD-MM-YYYY HH:mm" }}
+                        | URSULA SEIJAS
+                    </span>
                 </div>
             </mat-card-subtitle>
 
