--- a/src/app/pages/post/post-virtual-list/post-virtual-list.component.html
+++ b/src/app/pages/post/post-virtual-list/post-virtual-list.component.html
@@ -5,6 +5,7 @@
         </app-post-virtual-element>
     </cdk-virtual-scroll-viewport>
 </div>
+<fab-create-post></fab-create-post>
 
 <!-- <div class="virtual-scroll-container">
     <cdk-virtual-scroll-viewport #viewport itemSize="75" class="virtual-scroll-viewport">
