--- a/src/app/test/test-upload-dialog/test-upload-dialog.component.scss
+++ b/src/app/test/test-upload-dialog/test-upload-dialog.component.scss
@@ -2,6 +2,11 @@
     height: calc(100vh - 6rem);
 }
 
+.hovered {
+    box-shadow: 0px 0px 0px 3px #1A73E8 inset;
+    background: rgba(26, 115, 232, 0.1);
+    border-radius: 8px;
+}
 
 ::ng-deep .mat-tab-group {
     height: 100% !important;
@@ -23,18 +28,22 @@
     .mat-tab-body-wrapper {
         height: 100% !important;
         margin: 1rem;
-        align-items: center;
 
-        .dropzone {
-            display: flex;
-            justify-content: center;
-        }
+        .mat-tab-body {
+            height: 100%;
 
-        &:hover {
-            box-shadow: 0px 0px 0px 3px #1A73E8 inset;
-            background: rgba(26, 115, 232, 0.1);
-            border-radius: 8px;
+            .dropzone {
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                &:hover {
+                    box-shadow: 0px 0px 0px 3px #1A73E8 inset;
+                    background: rgba(26, 115, 232, 0.1);
+                    border-radius: 8px;
+                }
+            }
         }
     }
-
 }
