--- a/src/app/test/test-upload-dialog/test-upload-dialog.component.html
+++ b/src/app/test/test-upload-dialog/test-upload-dialog.component.html
@@ -33,7 +33,11 @@
                     <span fxFlex fxFlexOrder="2">{{ 'upload.dialog.camera' | translate }}</span>
                 </span>
             </ng-template>
-            Content 3
+            <app-camera (getPicture)="handleImage($event)"></app-camera>
+
+            <div class="webcam-image" *ngIf="webcamImage">
+                <img [src]="webcamImage.imageAsDataUrl" />
+            </div>
         </mat-tab>
     </mat-tab-group>
 
