--- a/src/app/layout/sidenav-content/sidenav-content.component.html
+++ b/src/app/layout/sidenav-content/sidenav-content.component.html
@@ -11,9 +11,10 @@
         <mat-icon mdListIcon>insert_drive_file</mat-icon>
         <span>Create post</span>
     </a>
-    <a mat-list-item routerLinkActive="active" routerLink="/polls">
-        <mat-icon mdListIcon>assignment</mat-icon>
-        <span>{{ 'sidenav.polls' | translate }}</span>
+    <a mat-list-item routerLinkActive="active" routerLink="/uploads">
+        <mat-icon class="material-symbols-outlined" mdListIcon>upload_file</mat-icon>
+
+        <span>{{ 'sidenav.uploads' | translate }}</span>
     </a>
     <a mat-list-item routerLinkActive="active" routerLink="/appointments">
         <mat-icon mdListIcon>date_range</mat-icon>
