--- a/src/app/test/test-upload-dialog/test-upload-dialog.component.scss
+++ b/src/app/test/test-upload-dialog/test-upload-dialog.component.scss
@@ -1,20 +1,37 @@
-:host .content {
-    height: calc(100vh - 6rem);
+.content {
+    background-color: #202124;
+    height: 41.25rem;
+
+    mat-card-header {
+        text-align: center;
+        color: #e8eaed;
+        align-self: center;
+        padding: 0.5rem 0;
+        line-height: 1rem;
+        font-size: 1.125rem;
+        letter-spacing: 0;
+        font-weight: 400;
+    }
 
     ::ng-deep .mat-tab-group {
         height: 100%;
 
+        &.mat-primary .mat-ink-bar,
+        .mat-tab-nav-bar.mat-primary .mat-ink-bar {
+            background-color: #8AB4F8 !important;
+        }
+
         .mat-tab-label {
             &.mat-tab-label-active {
                 background-color: transparent;
-                color: #3F51B5;
+                color: #8AB4F8;
                 font-weight: 500;
                 opacity: 1; // FIX Label has focused style after clicking - https://github.com/angular/components/issues/5903#issuecomment-802788039
             }
 
             &:hover {
-                transition: color 0.1s ease;
-                color: #80a7e6;
+                transition: 500ms cubic-bezier(0.35, 0, 0.25, 1);
+                color: whitesmoke;
             }
         }
 
@@ -25,25 +42,7 @@
             .mat-tab-body {
                 height: 100%;
 
-                .dropzone {
-                    height: 100%;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-
-                    &:hover {
-                        box-shadow: 0px 0px 0px 3px #1A73E8 inset;
-                        background: rgba(26, 115, 232, 0.1);
-                        border-radius: 8px;
-                    }
-                }
             }
         }
     }
-}
-
-.hovered {
-    box-shadow: 0px 0px 0px 3px #1A73E8 inset;
-    background: rgba(26, 115, 232, 0.1);
-    border-radius: 8px;
 }
