--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
         -->
 
         <router-outlet></router-outlet>
+        <!-- <fab-scroll-to-top [sidenavContent]="sidenavContent"></fab-scroll-to-top> -->
 
     </mat-sidenav-content>
 </mat-sidenav-container>
