--- a/src/app/layout/sidenav-content/sidenav-content.component.html
+++ b/src/app/layout/sidenav-content/sidenav-content.component.html
@@ -12,13 +12,12 @@
         <span>Create post</span>
     </a>
     <a mat-list-item routerLinkActive="active" routerLink="/uploads">
-        <mat-icon class="material-symbols-outlined" mdListIcon>upload_file</mat-icon>
-
+        <mat-icon mdListIcon>upload_file</mat-icon>
         <span>{{ 'sidenav.uploads' | translate }}</span>
     </a>
-    <a mat-list-item routerLinkActive="active" routerLink="/appointments">
-        <mat-icon mdListIcon>date_range</mat-icon>
-        <span>{{ 'sidenav.appointments' | translate }}</span>
+    <a mat-list-item routerLinkActive="active" routerLink="/image-editor">
+        <mat-icon mdListIcon>wallpaper</mat-icon>
+        <span>{{ 'sidenav.image_editor' | translate }}</span>
     </a>
     <a mat-list-item routerLinkActive="active" routerLink="/feeds">
         <mat-icon mdListIcon>rss_feed</mat-icon>
