--- a/src/app/pages/post/post-form/post-form.component.html
+++ b/src/app/pages/post/post-form/post-form.component.html
@@ -1,6 +1,6 @@
 <div fxLayoutAlign="center">
     <mat-card fxLayout="column" fxFlex="100" fxFlex.sm="85" fxFlex.gt-sm="75">
-        <app-file-upload></app-file-upload>
+        <app-file-upload-form></app-file-upload-form>
         <app-featured-image></app-featured-image>
         <form autocomplete="off" novalidate [formGroup]="form" (submit)="save()">
             <!-- <span fxLayoutAlign="space-between center">
