--- a/src/app/layout/fab-scroll-to-top/fab-scroll-to-top.component.html
+++ b/src/app/layout/fab-scroll-to-top/fab-scroll-to-top.component.html
@@ -1,3 +1,3 @@
-<button mat-mini-fab (click)="onScrollToTop()" class="mat-fab-bottom-right">
+<button mat-mini-fab [@slideUp] (click)="onScrollToTop()" class="mat-fab-bottom-right">
     <mat-icon aria-label="scroll to top">arrow_upward</mat-icon>
 </button>
