--- a/src/app/layout/image-editor/image-editor.component.html
+++ b/src/app/layout/image-editor/image-editor.component.html
@@ -1,1 +1,21 @@
-<p>image-editor works!</p>
+<app-default-toolbar></app-default-toolbar>
+
+<div fxLayoutAlign="center">
+    <mat-card class="content" fxLayout="column" fxFlex="100" fxFlex.sm="65" fxFlex.gt-sm="60">
+
+        <mat-card-header fxLayout="row" fxLayoutAlign="space-around center">
+            <mat-icon class="header-element" fxFlex>arrow_back</mat-icon>
+            <span class="header-element" fxFlex>Editar imagen</span>
+            <mat-icon class="header-element" fxFlex>restart_alt</mat-icon>
+        </mat-card-header>
+
+        <mat-card-content>
+
+        </mat-card-content>
+
+        <mat-card-actions>
+            <button mat-button>Ok</button>
+        </mat-card-actions>
+
+    </mat-card>
+</div>
