--- a/src/app/pages/post/post-form/post-form.component.html
+++ b/src/app/pages/post/post-form/post-form.component.html
@@ -58,9 +58,9 @@
                     {{ 'post.input.save' | translate }}
                 </button>
             </div>
-            <div>
+            <!-- <div>
                 <pre>{{form.value | json}}</pre>
-            </div>
+            </div> -->
         </form>
     </mat-card>
 </div>
