--- a/src/app/layout/image-editor/image-editor.component.scss
+++ b/src/app/layout/image-editor/image-editor.component.scss
@@ -1,9 +1,10 @@
 mat-card {
     background-color: #202124;
     height: 41.25rem;
+    border-radius: 0.5rem;
     z-index: 1; // TODO: ES POSIBLE QUE HAYA QUE BORRARLO CUANDO SEA UN DIALOG
 
-    mat-card-header {
+    .mat-card-header {
         color: #e8eaed;
         padding: 0.5rem 0;
         line-height: 1rem;
@@ -11,29 +12,40 @@ mat-card {
         letter-spacing: 0;
         font-weight: 400;
 
-
-        span {
-
-            flex: auto !important;
+        button {
+            background-color: transparent;
         }
 
-
-        .mat-icon:nth-last-child(1) {
-
-            flex: 0 !important;
-        }
-
-        ::ng-deep .mat-card-header-text {
-            margin: 0;
-        }
+        // ::ng-deep .mat-card-header-text {
+        //     margin: 0;
+        // }
 
     }
 
     mat-card-content {
         height: 100%;
-
         border: 1px solid red;
+
+        .image-cropper>* {
+            padding: 0;
+        }
+    }
+
+    mat-card-actions {
+
+        button {
+            background-color: transparent;
+            color: #8AB4F8;
+            margin: auto 1rem;
+
+            &:hover {
+                transition: 500ms cubic-bezier(0.35, 0, 0.25, 1);
+                color: whitesmoke;
+            }
+        }
 
 
     }
+
+
 }
